# MedQuartersPrototype

./: config.py  forms.py  main.py  models.py  pasted_text_1726447676963.txt  pyproject.toml
instance/: medquarters.db
static/css/: dispatcher_dashboard.css  driver_dashboard.css  styles.css
static/images/: create_map_placeholder.py
static/js/: dispatcher.js  driver.js
templates/: base.html  dispatcher_dashboard.html  driver_dashboard.html  login.html  popup_forms.html  reporting_dashboard.html  signup.html
