[tool.poetry]
name = "medquarters-nemt-app"
version = "0.1.0"
description = "A NEMT app using Flask and Vanilla JS with role-based access for dispatchers and drivers"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
flask-sqlalchemy = "^2.5.1"
flask-login = "^0.5.0"
flask-wtf = "^0.15.1"
flask-socketio = "^5.1.1"
werkzeug = "^2.0.1"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
